   - mySettings: migrate to G_ADD_PRIVATE (todo #994).
   - my_utils_window_restore_position(): now returns %TRUE is a position has been restored.
   - ofaButtonsBox: migrate to G_ADD_PRIVATE (todo #994).
   - ofaDateFilterHVBin: migrate to G_ADD_PRIVATE (todo #994).
   - ofaDateFilterHVBin: migrate to GResource (todo #826).
   - ofaDBMSRootBin: migrate to G_ADD_PRIVATE (todo #994).
   - ofaFileFormat: migrate to G_ADD_PRIVATE (todo #994).
   - ofaHub: migrate to G_ADD_PRIVATE (todo #994).
   - ofa_idate_filter_setup_bin(): use a GResource path.
   - ofaIPrefsPage: have an error message on init() and apply() methods.
   - ofaPage: migrate to G_ADD_PRIVATE (todo #994).
   - ofaPlugin: migrate to G_ADD_PRIVATE (todo #994).
   - ofaPReferences: move user interface to GResource (todo #826).
   - ofaPreferences: migrate to G_ADD_PRIVATE (todo #994).
   - ofoAccount: migrate to G_ADD_PRIVATE (todo #994).
   - ofoBase: migrate to G_ADD_PRIVATE (todo #994).
   - ofoBat: migrate to G_ADD_PRIVATE (todo #994).
   - ofoBat: rename ofo_bat_get|set_begin|end methods (todo #996).
   - ofoBatLine: migrate to G_ADD_PRIVATE (todo #994).
   - ofoClass: migrate to G_ADD_PRIVATE (todo #994).
   - ofoConcil: migrate to G_ADD_PRIVATE (todo #994).
   - ofoCurrency: migrate to G_ADD_PRIVATE (todo #994).
   - ofoDossier: migrate to G_ADD_PRIVATE (todo #994).
   - ofoEntry: migrate to G_ADD_PRIVATE (todo #994).
   - ofoLedger: migrate to G_ADD_PRIVATE (todo #994).
   - ofoOpeTemplate: migrate to G_ADD_PRIVATE (todo #994).
   - ofoRate: migrate to G_ADD_PRIVATE (todo #994).

-----------------------------------------------------------------------
 Version 0.48
 ============

 Released on 2016-02-14

 New features and improvements:

   - ofaAccountFrameBin: scroll the treeview up to the preselected account (todo #988).
   - ofaAccountProperties: display an error message + run non modal (todo #984).
   - ofaBatPage: now dynamically auto-updates on conciliations (todo #979).