@@ -159,7 +159,6 @@ libofa_core_la_LDFLAGS = \
 	$(NULL)
 
 ui_files = \
-	ofa-file-format-bin.ui								\
 	ofa-idbmodel.ui										\
 	$(NULL)
 
@@ -168,6 +167,7 @@ resources_ui = \
 	ofa-date-filter-hv-bin.ui							\
 	ofa-dbms-root-bin.ui								\
 	ofa-dossier-delete-prefs-bin.ui						\
+	ofa-file-format-bin.ui								\
 	ofa-preferences.ui									\
 	$(NULL)
 
