@@ -49,7 +49,13 @@
    - ofaDateFilterHVBin: migrate to G_ADD_PRIVATE (todo #994).
    - ofaDateFilterHVBin: migrate to GResource (todo #826).
    - ofaDBMSRootBin: migrate to G_ADD_PRIVATE (todo #994).
+   - ofaDBMSRootBin: migrate to GResource (todo #826).
+   - ofaDossierDeletePrefsBin: migrate to G_ADD_PRIVATE (todo #994).
+   - ofaDossierDeletePrefsBin: migrate to GResource (todo #826).
+   - ofaFileDir: migrate to G_ADD_PRIVATE (todo #994).
    - ofaFileFormat: migrate to G_ADD_PRIVATE (todo #994).
+   - ofaFileFormatBin: migrate to G_ADD_PRIVATE (todo #994).
+   - ofaFileFormatBin: migrate to GResource (todo #826).
    - ofaHub: migrate to G_ADD_PRIVATE (todo #994).
    - ofa_idate_filter_setup_bin(): use a GResource path.
    - ofaIPrefsPage: have an error message on init() and apply() methods.
